--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
   <script type="text/javascript">try { Typekit.load(); } catch (e) { }</script>
   <script
     type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
-  <link href="https://global-uploads.webflow.com/5fb25baf136b324f8da5b1a4/5fec8ba95ceaedf705d82d97_Humanity-H-fav.jpg"
+  <link href="######logo"
     rel="shortcut icon" type="image/x-icon" />
-  <link href="https://global-uploads.webflow.com/5fb25baf136b324f8da5b1a4/5fec91019eefd2c5c496aa76_Humanity-H-256.jpeg"
+  <link href="##logo##"
     rel="apple-touch-icon" />
   <script async="" src="https://www.googletagmanager.com/gtag/js?id=G-KL7NCVGH8G"></script>
   <script
@@ -63,14 +63,14 @@
 </head>
 
 <body>
-  <div data-w-id="79dee225-5c95-5aec-5ec7-57da81de6a6c" style="display:flex" class="section-loader">
+  <!--<div data-w-id="79dee225-5c95-5aec-5ec7-57da81de6a6c" style="display:flex" class="section-loader">
     <div class="h-animation-container">
       <div class="lottie-animation" data-w-id="fb942a18-268c-92dc-a67d-2abe094e28b3" data-animation-type="lottie"
         data-src="https://global-uploads.webflow.com/5fb25baf136b324f8da5b1a4/5fdcbacf6dea0b36ce11ac67_Logo%20Intro%20-%20Break%20Apart_1612.json"
         data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="canvas"
         data-default-duration="2.72" data-duration="0"></div>
     </div>
-  </div>
+  </div>-->
   <div class="landscapetwist">
     <div class="w-embed">
       <style>
